mirror/ex2/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ext-vs
spec:
  hosts:
    - ec2-15-207-229-119.ap-south-1.compute.amazonaws.com
  http:
  - route:
    - destination:
        host: ec2-15-207-229-119.ap-south-1.compute.amazonaws.com
        port:
          number: 8181
      weight: 100
    mirror:
      host: ec2-3-7-183-124.ap-south-1.compute.amazonaws.com 
      port:
        number: 8181
    mirrorPercentage:
      value: 100.0
